fix: Dropdown container overlaps other elements

--- a/src/styles/_dropdown.scss
+++ b/src/styles/_dropdown.scss
@@ -9,7 +9,7 @@
     position: absolute;
     top: 100%;
     left: 0;
-    z-index: 1;
+    z-index: 2;
     margin: 2px -2px;
     box-sizing: border-box;
     transform: translateY(-0.5rem);
